# Custom-assistant

./: .env  .env.example  .gitignore  README.md  py-test.py  pyproject.toml
gemini_asistente/: chat_manager.py  cli.py  constants.py  gemini_service.py  utils.py
src/gemini_helper/: config.py  constants.py
src/gemini_helper/cli/: commands.py  main.py  menus.py  printer.py
src/gemini_helper/core/: chat_manager.py  gemini_service.py
src/gemini_helper/utils/: parsing.py
